<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_design"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8A39E1"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/login"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/loginKanna"
        android:layout_width="179dp"
        android:layout_height="182dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/kanna_icon"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputs"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#8A39E1"
        android:textColorHint="#92A9BD"
        android:textCursorDrawable="@drawable/cursor_color"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/inputs"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#8A39E1"
        android:textColorHint="#92A9BD"
        android:textCursorDrawable="@drawable/cursor_color"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="#8A39E1"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/loginQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="#8A39E1"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />


</LinearLayout>